--- a/mplayer/config
+++ b/mplayer/config
@@ -7,13 +7,13 @@ vo=xv
 unicode=yes
 utf8=yes
 # Seek in file that is downloading
-#idx=yes
+idx=yes
 # Load all subs from current directory
 sub-fuzziness=2
 # Subtitles language priority
-#slang=en,sr
+slang=en,sr
 # Audio language priority
-# alang=jp,en
+alang=jp,en
 # Default to fonts in subtitles files, usefull for subtitles
 # that use different styles
 ass=yes
@@ -21,6 +21,5 @@ embeddedfonts=yes
 fontconfig=yes
 # Little console output
 really-quiet="1"
-# Douuble buffering (recommended for subtitles)
+# Double buffering (recommended for subtitles)
 double="yes"
-
