--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@ set $ws5 5: other
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-font xtf:Inconsolata 8
+font pango:Source Code Pro 15
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -219,7 +219,7 @@ bar {
   position bottom
   mode dock
   font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-  font xtf:Inconsolata 8
+  font pango:Source Code Pro 9
   colors {
     background #161616
     statusline #2D2D2D
