Add changes before reinstall

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory "/mnt/Podaci/Muzika"
+music_directory "/mnt/Podaci/Music"
 playlist_directory "/home/kaplar/.mpd/playlists"
 db_file "/home/kaplar/.mpd/mpd.db"
 log_file "/home/kaplar/.mpd/mpd.log"
